--- a/devicesmanagement/src/main/resources/application.properties
+++ b/devicesmanagement/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# DATABASE
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/devicesmanagementdb
+spring.datasource.username=root
+spring.datasource.password=914119
 
+# JPA / HIBERNATE
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
