Spring Security JWT

--- a/devicesmanagement-app-server/pom.xml
+++ b/devicesmanagement-app-server/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>auth0-spring-security-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!--hibernate-->
         <dependency>
             <groupId>org.hibernate</groupId>
