--- a/devicesmanagement-app-server/src/main/resources/application.properties
+++ b/devicesmanagement-app-server/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-# DATABASE
+## Server Properties
+#server.port= 5000
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/devicesmanagementdb
 spring.datasource.username=root
 spring.datasource.password=914119
 
-# JPA / HIBERNATE
+## Hibernate Properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+## Jackson Properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
+spring.jackson.time-zone= UTC
+
+##JWT
+app.jwtSecret= JWTSuperSecretKey
+app.jwtExpirationInMs = 604800000
